# ChangeLog for dev-python/pysensors
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-python/pysensors: Add pypi to remote-id in metadata.xml

*pysensors-0.0.3 (29 Nov 2014)

  29 Nov 2014; Johann Schmitz <ercpe@gentoo.org> +pysensors-0.0.3.ebuild:
  Version bump

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> pysensors-0.0.2.ebuild,
  metadata.xml:
  Bump to EAPI=5 and new python r1 eclasses

  12 Aug 2012; Justin Lecher <jlec@gentoo.org> pysensors-0.0.2.ebuild,
  +metadata.xml:
  Shorten DESCRIPTION, add metadata.xml