@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> pysensors-0.0.2.ebuild,
+  pysensors-0.0.3.ebuild:
+  dev-python/pysensors: Updated ebuild headers to match new $Id$ line
+
   06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   dev-python/pysensors: Add pypi to remote-id in metadata.xml
 
